@@ -197,7 +197,13 @@ func (c *SpanContext) SetDestinationAddress(addr string, port int) {
 }
 
 // SetDestinationService sets the destination service info in the context.
+//
+// Both service.Name and service.Resource are required. If either is empty,
+// then SetDestinationService is a no-op.
 func (c *SpanContext) SetDestinationService(service DestinationServiceSpanContext) {
+	if service.Name == "" || service.Resource == "" {
+		return
+	}
 	c.destinationService.Name = truncateString(service.Name)
 	c.destinationService.Resource = truncateString(service.Resource)
 	c.destination.Service = &c.destinationService
