@@ -19,6 +19,7 @@ package apm_test
 
 import (
 	"context"
+	"fmt"
 	"net/http"
 	"net/url"
 	"testing"
@@ -119,6 +120,55 @@ func TestSpanContextSetHTTPRequest(t *testing.T) {
 					Resource: tc.resource,
 				},
 			}, spans[0].Context.Destination)
+		})
+	}
+}
+
+func TestSetDestinationService(t *testing.T) {
+	type testcase struct {
+		name        string
+		resource    string
+		expectEmpty bool
+	}
+
+	testcases := []testcase{{
+		name:        "",
+		resource:    "",
+		expectEmpty: true,
+	}, {
+		name:        "",
+		resource:    "nonempty",
+		expectEmpty: true,
+	}, {
+		name:        "nonempty",
+		resource:    "",
+		expectEmpty: true,
+	}, {
+		name:     "nonempty",
+		resource: "nonempty",
+	}}
+
+	for _, tc := range testcases {
+		t.Run(fmt.Sprintf("%s_%s", tc.name, tc.resource), func(t *testing.T) {
+			_, spans, _ := apmtest.WithTransaction(func(ctx context.Context) {
+				span, _ := apm.StartSpan(ctx, "name", "span_type")
+				span.Context.SetDestinationAddress("testing.invalid", 123)
+				span.Context.SetDestinationService(apm.DestinationServiceSpanContext{
+					Name:     tc.name,
+					Resource: tc.resource,
+				})
+				span.End()
+			})
+			require.Len(t, spans, 1)
+			if tc.expectEmpty {
+				assert.Nil(t, spans[0].Context.Destination.Service)
+			} else {
+				assert.Equal(t, &model.DestinationServiceSpanContext{
+					Name:     tc.name,
+					Resource: tc.resource,
+					Type:     "span_type",
+				}, spans[0].Context.Destination.Service)
+			}
 		})
 	}
 }
